Fixed button spacing and added button group

--- a/src/assets/less/camps.less
+++ b/src/assets/less/camps.less
@@ -48,6 +48,9 @@
                 margin-bottom: (0/16rem);
             }
         }
+        .cs-button-solid {
+            margin-top: 1rem;
+        }
 
         .cs-video {
             display: block;
@@ -368,8 +371,7 @@
             margin: 0 0 clamp(1rem, 1.9vw, 1.25rem) 0;
             color: var(--headerColor);
         }
-
-
+        
         .cs-picture {
             /* changes at tablet */
             width: 100%;
